fix: quote in reviews section (add z-index)

--- a/css/style.css
+++ b/css/style.css
@@ -953,6 +953,7 @@ template {
   position: absolute;
   background-image: url(../img/quote-left.svg);
   background-repeat: no-repeat;
+  z-index: 1;
 }
 
 .reviews-slider__item:after {
@@ -964,7 +965,7 @@ template {
   position: absolute;
   background-image: url(../img/quote-right.svg);
   background-repeat: no-repeat;
-  z-index: -1;
+  z-index: 1;
 }
 
 .reviews-slider__button {
@@ -1053,6 +1054,7 @@ template {
   font-weight: normal;
   font-size: 12px;
   line-height: 160%;
+  z-index: 2;
   overflow-y: auto;
 }
 
